--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 	<servlet>
 		<servlet-name>tehServlet</servlet-name>
 		<servlet-class>teh.gwt.demo.server.rpc.TEHServiceImpl</servlet-class>
+		<load-on-startup>0</load-on-startup>
 	</servlet>
 
 	<servlet>
@@ -13,10 +14,10 @@
 		<servlet-class>com.google.gwt.logging.server.RemoteLoggingServiceImpl</servlet-class>
 	</servlet>
 
-	<servlet>
-		<servlet-name>jUnitHostImpl</servlet-name>
-		<servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class>
-	</servlet>
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>jUnitHostImpl</servlet-name> -->
+<!-- 		<servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class> -->
+<!-- 	</servlet> -->
 
 
 	<servlet-mapping>
@@ -29,10 +30,10 @@
 		<url-pattern>/gwt_teh_demo/teh</url-pattern>
 	</servlet-mapping>
 
-	<servlet-mapping>
-		<servlet-name>jUnitHostImpl</servlet-name>
-		<url-pattern>/gwt_teh_demo/junithost/*</url-pattern>
-	</servlet-mapping>
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>jUnitHostImpl</servlet-name> -->
+<!-- 		<url-pattern>/gwt_teh_demo/junithost/*</url-pattern> -->
+<!-- 	</servlet-mapping> -->
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
