--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.wokier</groupId>
 	<artifactId>gwt-teh-demo</artifactId>
-	<version>0.5</version>
+	<version>7</version>
 	<name>gwt-teh-demo</name>
 	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gwt.version>2.4.0</gwt.version>
+		<gwt.version>2.5.0</gwt.version>
+		<gwt.style>PRETTY</gwt.style>
+		<appengine.version>1.7.4</appengine.version>
 	</properties>
 
 	<description>gwt-teh Demo</description>
@@ -57,11 +59,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<!-- <version>3.0-beta-3</version> -->
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
@@ -69,11 +66,39 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.10</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>2.5.0-rc2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
+					<warSourceDirectory>war</warSourceDirectory>
+					<runTarget>index.html</runTarget>
+					<module>teh.gwt.demo.Gwt_teh_demo</module>
+					<style>${gwt.style}</style>
+					<hostedWebapp>${webappDirectory}</hostedWebapp>
+					<mode>selenium</mode>
+					<selenium>localhost:4444</selenium>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine.version}</version>
+				<configuration>
+					<version>${project.version}</version>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<!-- <version>3.0-beta-3</version> -->
 			</plugin>
 		</plugins>
 	</build>
@@ -82,7 +107,8 @@
 		<dependency>
 			<groupId>com.github.wokier</groupId>
 			<artifactId>gwt-teh</artifactId>
-			<version>0.5</version>
+			<version>0.7</version>
+			<classifier>teh</classifier>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -101,7 +127,7 @@
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-dev</artifactId>
 			<version>${gwt.version}</version>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
